# Git_HomeWork_3

./: main.py  processing.py  pyproject.toml
generator/: generators.py
generetor/: generators.py
scr/: decorators.py  generators.py  masks.py  processing.py  transactions.py  utils.py  widget.py
tests/: test_decorators.py  test_function.py  test_generators.py  test_masks.py  test_processing.py  test_transactions.py  test_utils.py  test_widget.py
