[tool.poetry]
name = "git-homework-3"
version = "0.1.0"
description = ""
authors = ["Olla <oldansh@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
flake8 = "^6.1.0"
mypy = "^1.6.1"
black = "^23.10.1"
isort = "^5.12.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[tool.isort]
line_length = 119

[tool.black]
line-length = 119

[tool.mypy]
warn_return_any = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
